--- a/src/app/ngfor-ex/ngfor-ex.component.html
+++ b/src/app/ngfor-ex/ngfor-ex.component.html
@@ -3,7 +3,7 @@
 <h1> Top {{itemNum}} Movies </h1>
 
 <ul>
-  <li *ngFor="let movie of movies2">
+  <li *ngFor="let movie of movies">
     {{ movie.title }} - {{movie.director}}
   </li>
 </ul>
@@ -26,15 +26,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let movie of movies2; let i = index">
+      <tr *ngFor="let movie of movies; let i = index">
         <td>{{i+1}}</td>
         <td>{{movie.title}}</td>
         <td>{{movie.director}}</td>
         <td>{{movie.cast}}</td>
-        <td>{{movie.releaseDate | date: 'dd/MM/YYYY hh:mm'}}</td>
+        <td>{{movie.releaseDate| date: 'dd/MM/YYYY hh:mm' }}</td>
         <td><button (click)="deleteMovie(i)">Xóa</button></td>
       </tr>
-      <tr *ngIf="movies2.length == 0">
+      <tr *ngIf="movies.length == 0">
         <td colspan="5" style="text-align: center;">Không có dữ liệU</td>
       </tr>
     </tbody>
